--- a/index.html
+++ b/index.html
@@ -3,14 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-
-    <!-- 微信搜索公众号『 程序员鱼皮 』，学习编程技术，发现更多好玩的项目！ -->
-    <title>合成大西瓜</title>
-
-    <!--http://www.html5rocks.com/en/mobile/mobifying/-->
+    <title>合成芙栗希娅</title>
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1" />
-
-    <!--https://developer.apple.com/library/safari/documentation/AppleApplications/Reference/SafariHTMLRef/Articles/MetaTags.html-->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="format-detection" content="telephone=no">
@@ -34,47 +28,19 @@
     <!--fix fireball/issues/3568 -->
     <!--<meta name="browsermode" content="application">-->
     <meta name="x5-page-mode" content="app">
-
-    <!--<link rel="apple-touch-icon" href=".png" />-->
-    <!--<link rel="apple-touch-icon-precomposed" href=".png" />-->
-
-
-    <!-- <script>
-        pushHistory();
-        window.addEventListener("popstate", function(e) {
-
-        }, false);
-        function pushHistory() {
-            var state = {
-                title: "",
-                url: window.location.href
-            };
-            window.history.pushState(state, state.title, state.url);
-        }
-    </script> -->
-    <script type="text/javascript">
-        var ua = navigator.userAgent.toLowerCase(); //获取判断用的对象
-        //判断是否是微信下访问
-        if (ua.match(/MicroMessenger/i) == "micromessenger") {
-            // if (/(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent)) {
-            location.href = "https://mp.weixin.qq.com/s/m0U0L-vnD0Gu8aPJ2vcPoA";
-            // }
-        }
-    </script>
-
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
     <link rel="stylesheet" type="text/css" href="style-mobile.css" />
-
 </head>
 
 <body style="margin: 0; background: #ddd;" align="center">
-    <div style="align:center;display: none"><img src="res/share.jpg" width="10%" /></div>
+    <div style="text-align:center;display: none"><img src="res/share.jpg" width="10%" /></div>
 
     <div id="canvasDiv" style="width:100%;height:100%;">
         <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
 
         <video id="contentElement" style="display:none;position: absolute;top:0px;left: 0px;">
-                <source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.mp4"></source>
-                <source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.webm"></source>
+            <source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.mp4"></source>
+            <source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.webm"></source>
       </video>
         <div id="block-Box" style="display:block;width:100%;height:100%;"></div>
     </div>
@@ -87,9 +53,7 @@
     </div>
 
     <div id="splash">
-        <!-- <div class="progress-bar stripes"> -->
-        <!-- <span style="width: 0%"></span> -->
-        <!-- </div> -->
+
     </div>
 
     <div id="loadingImg" style="top:45%;width: 100%;position:absolute; ">
@@ -114,25 +78,15 @@
 
         function judgeLanTitle() {
 
-            //        console.log("window.navigator.language",window.navigator.language);
-
             if (window.navigator.language == "zh-CN" || window.navigator.language == "zh-cn") {
-                document.title = "小游戏：合成大西瓜";
+                document.title = "小游戏：合成芙栗希娅";
             } else if (window.navigator.language == "zh-TW") {
-                document.title = "小遊戲：合成大西瓜";
+                document.title = "小遊戲：合成芙栗希娅";
             } else if (window.navigator.language == "zh-HK") {
-                document.title = "小遊戲：合成大西瓜";
-            } else if (window.navigator.language == "ko-KR") {
-                document.title = "작은 놀이：큰 수박 을 합성 하 다";
-            } else if (window.navigator.language == "ja-JP") {
-                document.title = "ミニゲーム：合成スイカ";
-            } else if (window.navigator.language == "th-TH") {
-                document.title = "เกมเล็กๆ：แตงโมสังเคราะห์";
+                document.title = "小遊戲：合成芙栗希娅";
             } else {
-                document.title = "Little game：Synthetic watermelon";
+                document.title = "Little game：Synthetic Felicia";
             }
-
-
         }
 
         var loadintT = document.getElementById("loadingText");
@@ -215,26 +169,17 @@
             }
         }
 
-
         /*setTimeout("ShowBannerAD()","2000");*/
     </script>
 
-
-
-
-
     <script src="src/settings.js" charset="utf-8"></script>
-
     <script src="main.js" charset="utf-8"></script>
-
-
     <script>
         window.adsbygoogle = window.adsbygoogle || [];
         const adBreak = function(o) {
             adsbygoogle.push(o);
         }
     </script>
-
 
     <script type="text/javascript">
         (function() {
@@ -245,14 +190,9 @@
 
             var splash = document.getElementById('splash');
             splash.style.display = 'block';
-
-
-            console.log("indexlTextTTTT");
-
             var cocos2d = document.createElement('script');
             cocos2d.async = true;
             cocos2d.src = window._CCSettings.debug ? 'cocos2d-js.js' : 'cocos2d-js-min.js';
-
             var engineLoaded = function() {
                 document.body.removeChild(cocos2d);
                 cocos2d.removeEventListener('load', engineLoaded, false);
@@ -262,10 +202,5 @@
             document.body.appendChild(cocos2d);
         })();
     </script>
-
-
-
-
 </body>
-
 </html>
