(*) 替换部分图片资源

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
     <title>合成芙栗希娅</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -28,7 +28,7 @@
     <!--fix fireball/issues/3568 -->
     <!--<meta name="browsermode" content="application">-->
     <meta name="x5-page-mode" content="app">
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" type="text/css" href="style-mobile.css" />
 </head>
 
@@ -74,7 +74,7 @@
         var adEndComplete = false;
         var resEndComplete = false;
 
-        judgeLanTitle();
+        // judgeLanTitle();
 
         function judgeLanTitle() {
 
